# Localbox

./: .gitignore  Cargo.toml  LICENSE  README.md
core/: Cargo.toml
core/src/: config.rs  engine.rs  lib.rs  main.rs  monitoring.rs  tls_workflow.rs
core/tests/: tls_workflow.rs
db/: Cargo.toml
db/src/: lib.rs
db/tests/: migrations.rs  sqlite_db.rs
localbox-core/: Cargo.toml
localbox-core/src/: config.rs  engine.rs  integrity.rs  lib.rs  main.rs
localbox-core/tests/: tls_workflow.rs
localbox-db/: Cargo.toml
localbox-db/src/: lib.rs
localbox-db/tests/: migrations.rs  sqlite_db.rs
localbox-models/: Cargo.toml
localbox-models/src/: change.rs  config.rs  lib.rs  peer.rs  wire.rs
localbox-models/tests/: basic.rs
localbox-peering/: Cargo.toml
localbox-peering/src/: connection.rs  discovery.rs  lib.rs  writer.rs
localbox-peering/tests/: tls_pinning.rs  virtual_peers.rs
localbox-protocol/: Cargo.toml  build.rs  wire.proto
localbox-protocol/src/: parse.rs  proto.rs
localbox-protocol/tests/: compat.rs  parse.rs
localbox-tls/: Cargo.toml
localbox-tls/src/: bootstrap.rs  runtime.rs  workflow.rs
localbox-utilities/: Cargo.toml
localbox-utilities/src/: disk_utilities.rs  ignore.rs  lib.rs
localbox-utilities/tests/: virtual_filesystem.rs  virtual_net.rs
models/: Cargo.toml
models/src/: change.rs  config.rs  lib.rs  share.rs  wire.rs
models/tests/: basic.rs
peering/: Cargo.toml
peering/src/: connection.rs  discovery.rs  lib.rs  tls.rs  writer.rs
peering/tests/: tls_pinning.rs  virtual_peers.rs
protocol/: Cargo.toml  wire.proto
protocol/src/: lib.rs  parse.rs
protocol/tests/: compat.rs  parse.rs
tls/: Cargo.toml
tls/src/: bootstrap.rs  lib.rs
tmp/localbox-tls-482366c5-5428-4ada-a80c-1669996b5fc4/: ca-export.pem  cert-chain.pem
utilities/: Cargo.toml
utilities/src/: disk_utilities.rs  filesystem.rs  ignore.rs  lib.rs  net.rs
utilities/tests/: virtual_filesystem.rs  virtual_net.rs
