[package]
name = "localbox-db"
version = "0.1.0"
edition = "2021"

[dependencies]
rusqlite = { version = "0.31", features = ["bundled"] }
models = { package = "localbox-models", path = "../localbox-models" }
time = "0.3"
serde_json = "1"
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
utilities = { package = "localbox-utilities", path = "../localbox-utilities" }
