[package]
name = "localbox-utilities"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
once_cell = "1"
sha2 = "0.10"
models = { package = "localbox-models", path = "../localbox-models" }
async-trait = "0.1"
tokio = { version = "1", features = ["net", "sync", "io-util", "rt-multi-thread"] }
