[package]
name = "peering"
version = "0.1.0"
edition = "2021"

[dependencies]
models = { path = "../models" }
db = { path = "../db" }
utilities = { path = "../utilities" }
protocol = { path = "../protocol" }
tls = { path = "../tls" }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
time = "0.3"
tokio-rustls = "0.24"
rustls = "0.21"
rustls-pemfile = "1"
rcgen = "0.12"
sha2 = "0.10"
tracing = "0.1"
tokio-util = { version = "0.7", features = ["rt"] }
